--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -6,7 +6,8 @@ $titleFont: 'Raleway', serif;
 $bodyFont: 'Open Sans', serif;
 
 $phone: 'max-width: 500px';
-$medium-phone: 'max-width: 767px';
+//$medium-phone: 'max-width: 767px';
+$medium-phone: 'min-width: 501px';
 $tablet: 'min-width: 768px';
 $laptop: 'min-width: 1024px';
 $desktop: 'min-width: 1440px';
